<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".DetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_posterImage"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_details"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tv_title_label"
                    style="@style/label"
                    android:layout_height="47dp"
                    android:text="@string/movie_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/textViewDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_label"
                    tools:text="Sonic the Hedgehog" />

                <TextView
                    android:id="@+id/tv_label_rate"
                    style="@style/label"
                    android:layout_height="47dp"
                    android:text="@string/rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/textViewDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_rate"
                    tools:text="7" />

                <TextView
                    android:id="@+id/tv_label_date"
                    style="@style/label"
                    android:layout_height="47dp"
                    android:text="@string/released_on"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/textViewDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_date"
                    tools:text="10-20-20" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_posterImage" />

                <TextView
                    android:id="@+id/tv_label_synopsis"
                    style="@style/label"
                    android:text="@string/synopsis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_posterImage" />

                <TextView
                    android:id="@+id/tv_synopsis"
                    style="@style/textViewDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="16dp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/tv_label_trailers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_synopsis"
                    tools:text="There was a time when peace was the foundation of." />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/tv_label_trailers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

                <TextView
                    android:id="@+id/tv_label_trailers"
                    style="@style/label"
                    android:text="@string/trailers"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trailerRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/tv_label_reviews"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_trailers" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/tv_label_reviews"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_trailerRecycler" />

                <TextView
                    android:id="@+id/tv_label_reviews"
                    style="@style/label"
                    android:layout_marginBottom="8dp"
                    android:text="@string/reviews"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/rv_reviewRecycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_trailerRecycler" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_reviewRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_label_reviews"
                    app:layout_constraintStart_toStartOf="@+id/tv_label_reviews"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_reviews" />

                <ImageButton
                    android:id="@+id/ib_favoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/background_dark"
                    android:src="@drawable/ic_unfavorite_movie"
                    app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

                <TextView
                    android:id="@+id/tv_favoriteLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/favorite"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ib_favoriteButton"
                    app:layout_constraintEnd_toEndOf="@+id/tv_label_rate"
                    app:layout_constraintStart_toStartOf="@+id/tv_label_rate"
                    app:layout_constraintTop_toTopOf="@+id/ib_favoriteButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>